# Versiona

./: .env.example  .gitignore  LICENSE  README.md  REFACTOR_PROPOSAL.md  pyproject.toml
examples/: README.md
examples/agent/: README.md  basic_agent.py  conversation_fork.py  snapshot_restore.py  tool_management.py
examples/document/: README.md  document_editing.py
examples/enterprise/: README.md  order_tracking.py
examples/game/: README.md  game_save.py
versiona/: __init__.py  client.py
versiona/context/: __init__.py  types.py
versiona/core/: __init__.py  protocols.py  types.py
versiona/db/: __init__.py  functions.py  schema.py  tables.py
versiona/db/migrations/: 001_core.sql
versiona/extensions/: __init__.py
versiona/extensions/agent_state/: __init__.py  client.py  schema.py  types.py
versiona/extensions/compression/: __init__.py  client.py  schema.py  types.py
versiona/extensions/graph/: __init__.py  client.py  feedback.py  functions.py  schema.py  types.py
versiona/extensions/longterm_memory/: __init__.py  client.py  schema.py  types.py
