[project]
name = "versiona"
version = "0.1.0"
description = "Git-like Version Control for PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Chen Lunlun" }
]
keywords = ["postgresql", "version-control", "git", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/chenlunlun/versiona"
Documentation = "https://github.com/chenlunlun/versiona#readme"
Repository = "https://github.com/chenlunlun/versiona.git"
Issues = "https://github.com/chenlunlun/versiona/issues"

[project.optional-dependencies]
# Graph extension (symbol indexing, context views)
graph = []  # No additional dependencies required

# All extensions
all = []

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["versiona"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
